--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WCMS Grade Calculator</title>
+    <title>Collierville Schools Grade Calculator</title>
   </head>
   <body>
   	<h1>WCMS Grade Calculator</h1>
