--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Collierville Schools Grade Calculator</title>
   </head>
   <body>
-  	<h1>WCMS Grade Calculator</h1>
+  	<h1>Collierville Schools Grade Calculator</h1>
     <p>Enter your grades with new lines in between each one. Don't include extra lines.</p>
     <table>
       <tr>
