--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	let res1 = document.getElementById("res1");
     
     function valToList(val) {
-      let vari = val.split("\n");
+      let vari = val.split("\n").filter(e => e);
       let offset = 0;
       for (var i = 0; i < vari.length; i++) {
         if (isNaN(Number(vari[i]))) {
