--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     
     function valToList(val) {
       let vari = val.split("\n").filter(e => e);
+	vari.forEach((e, index) => {vari[index] = Number(eval(e))});
       let offset = 0;
       for (var i = 0; i < vari.length; i++) {
         if (isNaN(Number(vari[i]))) {
